# SmithedSummit24

./: .gitattributes  .gitignore  README.md  beet-.yml  beet.yml  profile.prof  pyproject.toml
assets/: assets.ajmeta  credits.md  music_speaker.ajblueprint
assets/assets/minecraft/models/item/: white_dye.json
assets/assets/nbs/lang/: en_us.json
assets/assets/nbs/models/: balloon_note_base.json  balloon_note_base_.json  headphones.json  monitor.json  note.json  note_block_flat.json  scroll_panel.json
assets/assets/nbs/textures/block/: record_animated.png.mcmeta
nbs/: model.py  music.py
pigstep/: note.py  plugin.py
songs/: Box Has Key (Baba Is You) - Bentroen.nbs  Everybody Falls (Fall Guys Theme) - Bentroen.nbs  Remix 10 (Super Mario Run) - Bentroen.nbs  Thriller - Bentroen.nbs  list_songs.py  songs.csv
songs/panel/: countdown.nbs  nbw_theme.nbs
src/: authors.json  data.ajmeta  generate_songs.bolt  global.bolt  interaction.bolt  interaction.py  model.py  note.py  songs.json  sound_config.py
src/data/animated_java/function/music_speaker/: apply_default_pose.mcfunction  as_own_locator_entities.mcfunction  on_load.mcfunction  set_default_pose.mcfunction  (+1 more)
src/data/nbs/advancement/: headphones_equip.json  headphones_left.json  headphones_right.json  headphones_unequip.json
src/data/nbs/function/: headphones.mcfunction  next.mcfunction  pause.mcfunction  play.mcfunction  prev.mcfunction  stop.mcfunction
src/panel/: generate_songs.bolt  panel.bolt  panel.py
structures/: booth4.schem  container2.schem
templates/: global_tick.mcfunction  tick.mcfunction
(+141 files in other folders)
